feat: update notebook for processing biscoint data

--- a/notebooks/process biscoint data.ipynb
+++ b/notebooks/process biscoint data.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6386cfa5",
+   "metadata": {},
+   "source": [
+    "# Process biscoint data\n",
+    "\n",
+    "This exchange was used only once, a long time ago... No need to be more sophisticated than that!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "948cae68",
@@ -10,7 +20,8 @@
     "\n",
     "# To run this sql query...\n",
     "insert into crypto.swaps (\n",
-    "    swap_date,\n",
+    "    id,\n",
+    "    date,\n",
     "    received_amount,\n",
     "    paid_taxes_amount,\n",
     "    paid_amount,\n",
@@ -20,9 +31,9 @@
     "    exchange_name,\n",
     "    _processed_at\n",
     ") values\n",
-    "(date '2021-04-23', 0.0003607, 0, 100, 'BTC', 'BTC', 'BRL', 'biscoint', now()),\n",
-    "(date '2021-05-22', 0.0004867, 0, 100, 'BTC', 'BTC', 'BRL', 'biscoint', now()),\n",
-    "(date '2021-06-05', 0.00162435, 0, 300, 'BTC', 'BTC', 'BRL', 'biscoint', now())"
+    "('biscoint_2021-04-23', date '2021-04-23', 0.0003607, 0, 100, 'BTC', 'BTC', 'BRL', 'biscoint', now()),\n",
+    "('biscoint_2021-05-22', date '2021-05-22', 0.0004867, 0, 100, 'BTC', 'BTC', 'BRL', 'biscoint', now()),\n",
+    "('biscoint_2021-06-05', date '2021-06-05', 0.00162435, 0, 300, 'BTC', 'BTC', 'BRL', 'biscoint', now())"
    ]
   }
  ],
